--- a/src/main/resources/templates/_menu.html
+++ b/src/main/resources/templates/_menu.html
@@ -1,18 +1,14 @@
 <div xmlns:th="http://www.thymeleaf.org"
      style="border: 1px solid #ccc;padding:5px;margin-bottom:20px;">
  
-  <a th:href="@{/}">Home</a>
+  <a th:href="@{/}">Menu 1</a>
  
      | &nbsp;
   
-   <a th:href="@{/userInfo}">User Info</a>
+   <a th:href="@{/}">Menu 2</a>
   
      | &nbsp;
   
-   <a th:href="@{/admin}">Admin</a>
+   <a th:href="@{/}">Menu 3</a>
     
-     | &nbsp;
-      
-   <a th:if="${#request.userPrincipal != null}" th:href="@{/logout}">Logout</a>
-  
 </div>
