--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -1,14 +1,17 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
    <head>
-      <title>Logout</title>
+      <title>Home</title>
    </head>
-    
    <body>
       <!-- Include _menu.html -->
       <th:block th:include="/_menu"></th:block>
        
-      <h1>Logout Successful!</h1>
+       
+      <h2>User Info Page</h2>
+      <h3>Welcome! </h3>
+       
+       
    </body>
     
 </html>
