--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,21 +6,11 @@
 <meta charset="ISO-8859-1">
 <title></title>
 <th:block th:fragment="commonResources">
-<link href="../../static/bootstrap/css/bootstrap.css" rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.css}"/>
-<link href="../../static/bootstrap/css/bootstrap.min.css" rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}"/>
-
-<script src="../../static/jquery/jquery-3.2.1.slim.min.js" type="text/javascript" th:src="@{/jquery/jquery-3.2.1.slim.min.js}" /></script>
-<script src="../../static/jquery/jquery-3.4.1.min.js" type="text/javascript" th:src="@{/jquery/jquery-3.4.1.min.js}" /></script>
-
-<script src="../../static/bootstrap/js/popper.min.js" type="text/javascript" th:src="@{/bootstrap/js/popper.min.js}"/></script>
-<script src="../../static/bootstrap/js/bootstrap.min.js" type="text/javascript" th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
-
 <!-- Custom fonts for this template-->
-<link href="../../static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
 <!-- Custom styles for this template-->
-<link href="../../static/css/sb-admin-2.min.css" rel="stylesheet">
+<link href="../../static/css/sb-admin-2.min.css"  rel="stylesheet" th:href="@{/css/sb-admin-2.min.css}"/>
 </th:block>
 
 </head>
