--- a/src/main/resources/templates/fragments/topbar.html
+++ b/src/main/resources/templates/fragments/topbar.html
@@ -25,7 +25,7 @@
 					                th:text="${type}"></option>
 						</select>
 					</div>
-					<input type="text" class="form-control bg-light border-1 small ml-2" style="width:80%;" placeholder="Url...">
+					<input type="text" id="url" name="url" class="form-control bg-light border-1 small ml-2" style="width:80%;" placeholder="Url...">
 					<div class="input-group-append"></div>
 				</div>
 			</form>
